amended data import for Mac

--- a/Notebooks/Nissan.ipynb
+++ b/Notebooks/Nissan.ipynb
@@ -14,20 +14,11 @@
    "id": "dff887fd-454b-458a-9860-78c0376e1cb2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T10:32:32.457460Z",
-     "start_time": "2023-02-08T10:32:29.079313Z"
+     "end_time": "2023-02-09T09:42:46.906771Z",
+     "start_time": "2023-02-09T09:42:45.566228Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hurwi\\AppData\\Roaming\\Python\\Python39\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -48,33 +39,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "11373b26",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T10:32:32.473464Z",
-     "start_time": "2023-02-08T10:32:32.458460Z"
+     "end_time": "2023-02-09T09:44:37.610901Z",
+     "start_time": "2023-02-09T09:44:37.603713Z"
     }
    },
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "os.listdir('c:')\n",
+    "os.listdir()\n",
     "cwd = os.getcwd()\n",
-    "ind = cwd.rfind('\\\\')\n",
-    "addpath = cwd[:ind] + '\\\\Data'\n",
+    "ind = cwd.rfind('/')\n",
+    "addpath = cwd[:ind] + '/Data'\n",
     "sys.path.append(addpath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
+   "id": "0632bb44",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-09T09:44:38.280700Z",
+     "start_time": "2023-02-09T09:44:38.275099Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/edz/PycharmProjects/NissanBD/Data'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addpath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "29d9bcab",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T10:32:32.489468Z",
-     "start_time": "2023-02-08T10:32:32.474487Z"
+     "end_time": "2023-02-09T09:44:51.330317Z",
+     "start_time": "2023-02-09T09:44:51.321549Z"
     }
    },
    "outputs": [
@@ -82,8 +99,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jato Extract EGB 20221130.xlsx\n",
-      "C:\\Users\\hurwi\\PycharmProjects\\NissanBD\\DataJato Extract EGB 20221130.xlsx\n"
+      "MPCR VI VA TPVA data 2019.xlsx\n",
+      "/Users/edz/PycharmProjects/NissanBD/DataMPCR VI VA TPVA data 2019.xlsx\n"
      ]
     }
    ],
@@ -95,75 +112,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "fb24381d",
+   "execution_count": 16,
+   "id": "380937ae",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T10:32:32.505471Z",
-     "start_time": "2023-02-08T10:32:32.490468Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hurwi\\PycharmProjects\\NissanBD\\Data\\MPCR VI VA TPVA data 2019.xlsx\n"
-     ]
-    }
-   ],
-   "source": [
-    "viva = os.listdir(addpath)[1]\n",
-    "viva = addpath + '\\\\' + viva\n",
-    "print(viva)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a9320194",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-08T10:32:32.521474Z",
-     "start_time": "2023-02-08T10:32:32.506471Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hurwi\\PycharmProjects\\NissanBD\\Data\\Sales Volume FRA & EGB 2019-2022 Brand+Model+version+Unique ID.xlsx\n"
-     ]
-    }
-   ],
-   "source": [
-    "sales = os.listdir(addpath)[2]\n",
-    "sales = addpath + '\\\\' + sales\n",
-    "print(sales)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "8f4befec",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-08T10:32:32.537479Z",
-     "start_time": "2023-02-08T10:32:32.522475Z"
+     "end_time": "2023-02-09T09:45:36.259602Z",
+     "start_time": "2023-02-09T09:45:36.250760Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Jato Extract EGB 20221130.xlsx',\n",
-       " 'MPCR VI VA TPVA data 2019.xlsx',\n",
-       " 'Sales Volume FRA & EGB 2019-2022 Brand+Model+version+Unique ID.xlsx',\n",
-       " '__init__.py']"
+       "['MPCR VI VA TPVA data 2019.xlsx',\n",
+       " '__init__.py',\n",
+       " 'Jato Extract EGB 20221130.xlsx',\n",
+       " 'Sales Volume FRA & EGB 2019-2022 Brand+Model+version+Unique ID.xlsx']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,30 +141,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
+   "id": "fb24381d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-09T09:46:28.336568Z",
+     "start_time": "2023-02-09T09:46:28.331857Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/edz/PycharmProjects/NissanBD/Data/MPCR VI VA TPVA data 2019.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "viva = os.listdir(addpath)[0]\n",
+    "viva = addpath + '/' + viva\n",
+    "print(viva)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a9320194",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-09T09:47:00.631541Z",
+     "start_time": "2023-02-09T09:47:00.626310Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/edz/PycharmProjects/NissanBD/Data/Sales Volume FRA & EGB 2019-2022 Brand+Model+version+Unique ID.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales = os.listdir(addpath)[3]\n",
+    "sales = addpath + '/' + sales\n",
+    "print(sales)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "495d58e9-6188-4619-b4ba-bc4f911f9be3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T10:33:05.577653Z",
-     "start_time": "2023-02-08T10:32:32.538478Z"
+     "end_time": "2023-02-09T09:47:57.011212Z",
+     "start_time": "2023-02-09T09:47:21.211335Z"
     }
    },
    "outputs": [],
    "source": [
-    "tgt_fil = os.listdir(addpath)[0]\n",
-    "df=pd.read_excel(addpath+'\\\\'+tgt_fil)\n",
+    "tgt_fil = os.listdir(addpath)[2]\n",
+    "df=pd.read_excel(addpath+'/'+tgt_fil)\n",
     "vdf = pd.read_excel(viva)\n",
     "sdf = pd.read_excel(sales)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "076c3ff5-61f0-4723-9f76-c06cf14e0020",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T10:33:05.705470Z",
-     "start_time": "2023-02-08T10:33:05.578653Z"
+     "end_time": "2023-02-09T09:47:59.563856Z",
+     "start_time": "2023-02-09T09:47:59.401644Z"
     }
    },
    "outputs": [
@@ -2265,7 +2282,7 @@
        "2           NaN           NaN  48550.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2276,12 +2293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "5acaf333-e8df-4cd6-9a88-b97529c711fc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T10:33:05.721474Z",
-     "start_time": "2023-02-08T10:33:05.707471Z"
+     "end_time": "2023-02-09T09:48:02.336416Z",
+     "start_time": "2023-02-09T09:48:02.329069Z"
     }
    },
    "outputs": [
@@ -2291,7 +2308,7 @@
        "(3471, 410)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33619,7 +33636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
