--- a/Notebooks/Nissan.ipynb
+++ b/Notebooks/Nissan.ipynb
@@ -14,11 +14,20 @@
    "id": "dff887fd-454b-458a-9860-78c0376e1cb2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-09T09:42:46.906771Z",
-     "start_time": "2023-02-09T09:42:45.566228Z"
+     "end_time": "2023-02-10T09:10:47.969442Z",
+     "start_time": "2023-02-10T09:10:44.395598Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hurwi\\AppData\\Roaming\\Python\\Python39\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -35,6 +44,61 @@
    "metadata": {},
    "source": [
     "## Data import"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e576f557",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-10T09:11:28.718487Z",
+     "start_time": "2023-02-10T09:11:28.709487Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5f3f17f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.name is 'nt':\n",
+    "    separator = '\\\\'\n",
+    "    \n",
+    "else:\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "54d01e0b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-10T09:12:02.913074Z",
+     "start_time": "2023-02-10T09:12:02.902072Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\hurwi\\\\PycharmProjects\\\\NissanBD\\\\Notebooks'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
    ]
   },
   {
@@ -38402,7 +38466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
