added in logic for dynamically loading files regardless of search order

--- a/Notebooks/Nissan.ipynb
+++ b/Notebooks/Nissan.ipynb
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e576f557",
+   "id": "fb8f4b98",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-10T09:11:28.718487Z",
@@ -63,115 +63,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d5f3f17f",
-   "metadata": {},
+   "execution_count": 6,
+   "id": "53999c5e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-10T09:13:03.662068Z",
+     "start_time": "2023-02-10T09:13:03.657067Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "if os.name is 'nt':\n",
+    "if os.name == 'nt':\n",
     "    separator = '\\\\'\n",
     "    \n",
     "else:\n",
-    "        "
+    "    separator = '/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "54d01e0b",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-10T09:12:02.913074Z",
-     "start_time": "2023-02-10T09:12:02.902072Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\hurwi\\\\PycharmProjects\\\\NissanBD\\\\Notebooks'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "11373b26",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-09T09:44:37.610901Z",
-     "start_time": "2023-02-09T09:44:37.603713Z"
+     "end_time": "2023-02-10T09:13:36.548827Z",
+     "start_time": "2023-02-10T09:13:36.530823Z"
     }
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import sys\n",
     "os.listdir()\n",
     "cwd = os.getcwd()\n",
-    "ind = cwd.rfind('/')\n",
-    "addpath = cwd[:ind] + '/Data'\n",
+    "ind = cwd.rfind(separator)\n",
+    "addpath = cwd[:ind] + separator + 'Data'\n",
     "sys.path.append(addpath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "0632bb44",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-09T09:44:38.280700Z",
-     "start_time": "2023-02-09T09:44:38.275099Z"
+     "end_time": "2023-02-10T09:13:38.142258Z",
+     "start_time": "2023-02-10T09:13:38.130254Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/edz/PycharmProjects/NissanBD/Data'"
+       "'C:\\\\Users\\\\hurwi\\\\PycharmProjects\\\\NissanBD\\\\Data'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "addpath"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "29d9bcab",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-09T09:44:51.330317Z",
-     "start_time": "2023-02-09T09:44:51.321549Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MPCR VI VA TPVA data 2019.xlsx\n",
-      "/Users/edz/PycharmProjects/NissanBD/DataMPCR VI VA TPVA data 2019.xlsx\n"
-     ]
-    }
-   ],
-   "source": [
-    "tgt_fil = os.listdir(addpath)[0]\n",
-    "print(tgt_fil)\n",
-    "print (addpath + tgt_fil)"
    ]
   },
   {
@@ -205,12 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "fb24381d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-09T09:46:28.336568Z",
-     "start_time": "2023-02-09T09:46:28.331857Z"
+     "end_time": "2023-02-10T09:19:30.257042Z",
+     "start_time": "2023-02-10T09:19:30.245040Z"
     }
    },
    "outputs": [
@@ -218,24 +170,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/edz/PycharmProjects/NissanBD/Data/MPCR VI VA TPVA data 2019.xlsx\n"
+      "C:\\Users\\hurwi\\PycharmProjects\\NissanBD\\Data\\MPCR VI VA TPVA data 2019.xlsx\n"
      ]
     }
    ],
    "source": [
-    "viva = os.listdir(addpath)[0]\n",
-    "viva = addpath + '/' + viva\n",
+    "viva = [fil for fil in os.listdir(addpath) if fil.find('VI VA') != -1][0]\n",
+    "viva = addpath + separator + viva\n",
     "print(viva)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "a9320194",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-09T09:47:00.631541Z",
-     "start_time": "2023-02-09T09:47:00.626310Z"
+     "end_time": "2023-02-10T09:20:15.175630Z",
+     "start_time": "2023-02-10T09:20:15.158627Z"
     }
    },
    "outputs": [
@@ -243,13 +195,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/edz/PycharmProjects/NissanBD/Data/Sales Volume FRA & EGB 2019-2022 Brand+Model+version+Unique ID.xlsx\n"
+      "C:\\Users\\hurwi\\PycharmProjects\\NissanBD\\Data\\Sales Volume FRA & EGB 2019-2022 Brand+Model+version+Unique ID.xlsx\n"
      ]
     }
    ],
    "source": [
-    "sales = os.listdir(addpath)[3]\n",
-    "sales = addpath + '/' + sales\n",
+    "sales = [fil for fil in os.listdir(addpath) if fil.find('Sales') != -1][0]\n",
+    "sales = addpath + separator + sales\n",
     "print(sales)"
    ]
   },
@@ -265,8 +217,8 @@
    },
    "outputs": [],
    "source": [
-    "tgt_fil = os.listdir(addpath)[2]\n",
-    "df=pd.read_excel(addpath+'/'+tgt_fil)\n",
+    "[fil for fil in os.listdir(addpath) if fil.find('VI VA') != -1][0]\n",
+    "df=pd.read_excel(addpath+separator+tgt_fil)\n",
     "vdf = pd.read_excel(viva)\n",
     "sdf = pd.read_excel(sales)"
    ]
