added a load and transform shortcut for the elasticity modelling section

--- a/Notebooks/Nissan.ipynb
+++ b/Notebooks/Nissan.ipynb
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb8f4b98",
+   "id": "bf633e70",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-10T09:11:28.718487Z",
@@ -58,21 +58,8 @@
    },
    "outputs": [],
    "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "53999c5e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-10T09:13:03.662068Z",
-     "start_time": "2023-02-10T09:13:03.657067Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "import os\n",
+    "\n",
     "if os.name == 'nt':\n",
     "    separator = '\\\\'\n",
     "    \n",
@@ -102,61 +89,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0632bb44",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-10T09:13:38.142258Z",
-     "start_time": "2023-02-10T09:13:38.130254Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\hurwi\\\\PycharmProjects\\\\NissanBD\\\\Data'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "addpath"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "380937ae",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-09T09:45:36.259602Z",
-     "start_time": "2023-02-09T09:45:36.250760Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['MPCR VI VA TPVA data 2019.xlsx',\n",
-       " '__init__.py',\n",
-       " 'Jato Extract EGB 20221130.xlsx',\n",
-       " 'Sales Volume FRA & EGB 2019-2022 Brand+Model+version+Unique ID.xlsx']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir(addpath)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "id": "fb24381d",
    "metadata": {
@@ -177,47 +109,13 @@
    "source": [
     "viva = [fil for fil in os.listdir(addpath) if fil.find('VI VA') != -1][0]\n",
     "viva = addpath + separator + viva\n",
-    "print(viva)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "a9320194",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-10T09:20:15.175630Z",
-     "start_time": "2023-02-10T09:20:15.158627Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hurwi\\PycharmProjects\\NissanBD\\Data\\Sales Volume FRA & EGB 2019-2022 Brand+Model+version+Unique ID.xlsx\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(viva)\n",
+    "\n",
     "sales = [fil for fil in os.listdir(addpath) if fil.find('Sales') != -1][0]\n",
     "sales = addpath + separator + sales\n",
-    "print(sales)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "495d58e9-6188-4619-b4ba-bc4f911f9be3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-09T09:47:57.011212Z",
-     "start_time": "2023-02-09T09:47:21.211335Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "[fil for fil in os.listdir(addpath) if fil.find('VI VA') != -1][0]\n",
+    "print(sales)\n",
+    "\n",
+    "tgt_fil = [fil for fil in os.listdir(addpath) if fil.find('Jato') != -1][0]\n",
     "df=pd.read_excel(addpath+separator+tgt_fil)\n",
     "vdf = pd.read_excel(viva)\n",
     "sdf = pd.read_excel(sales)"
@@ -18904,6 +18802,70 @@
     "<br>\n",
     "Combining these we can determine revenue elasticity, and from <br>\n",
     "there we can calculate price optimality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f11d4259",
+   "metadata": {},
+   "source": [
+    "### data load shortcut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "79399f4a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-10T09:46:32.794877Z",
+     "start_time": "2023-02-10T09:45:59.275686Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hurwi\\PycharmProjects\\NissanBD\\Data\\MPCR VI VA TPVA data 2019.xlsx\n",
+      "C:\\Users\\hurwi\\PycharmProjects\\NissanBD\\Data\\Sales Volume FRA & EGB 2019-2022 Brand+Model+version+Unique ID.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sn\n",
+    "import numpy as np\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "if os.name == 'nt':\n",
+    "    separator = '\\\\'    \n",
+    "else:\n",
+    "    separator = '/'\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "ind = cwd.rfind(separator)\n",
+    "addpath = cwd[:ind] + separator + 'Data'\n",
+    "sys.path.append(addpath)\n",
+    "\n",
+    "viva = [fil for fil in os.listdir(addpath) if fil.find('VI VA') != -1][0]\n",
+    "viva = addpath + separator + viva\n",
+    "\n",
+    "sales = [fil for fil in os.listdir(addpath) if fil.find('Sales') != -1][0]\n",
+    "sales = addpath + separator + sales\n",
+    "\n",
+    "tgt_fil = [fil for fil in os.listdir(addpath) if fil.find('Jato') != -1][0]\n",
+    "df=pd.read_excel(addpath+separator+tgt_fil)\n",
+    "vdf = pd.read_excel(viva)\n",
+    "sdf = pd.read_excel(sales)\n",
+    "\n",
+    "df = df.loc[:, df.isnull().mean() < 0.2]\n",
+    "df[\"msrp\"] = [float(str(i).replace(\",\", \"\")) for i in df[\"msrp\"]]"
    ]
   },
   {
